# CV

./: README.md
computer network/devel/: .catkin  _setup_util.py
computer network/devel/lib/pkgconfig/: video_client_socket.pc  video_socket_read.pc
lidar_hector_slam/devel/: local_setup.sh
lidar_hector_slam/devel/lib/hector_geotiff/: geotiff_node  (+1 more)
lidar_learning/devel/: .catkin  .rosinstall  setup.sh
lidar_learning/src/location/: CMakeLists.txt
lidar_learning/src/xiangquancars/: CMakeLists.txt
location-test/devel/: .catkin  .rosinstall
location-test/src/communicate/: CMakeLists.txt
location-test/src/xiangquancars/: package.xml
location-test/src/xiangquancars/launch/: display.launch  gazebo.launch
location-test/src/xiangquancars/meshes/: A_wheel.STL  Support.STL  base_link.STL  lidar.STL
location-test/src/xiangquancars/urdf/: xiangquancars.urdf
rabbit_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
rabbit_ws/logs/communicate/: build.check.021.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.010.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.016.log.stderr  build.make.019.log.stderr
rabbit_ws/src/communicate/: CMakeLists.txt
rabbit_ws/src/lidar_distinguish/: CMakeLists.txt
rabbit_ws/src/location/: CMakeLists.txt  package.xml
rc _ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
rc _ws/logs/rc_gazebo/: build.cmake.000.log.stderr
(+392 files in other folders)
